--- a/.gitignore
+++ b/.gitignore
@@ -201,4 +201,7 @@ dmypy.json
 
 # pytype static type analyzer
 
+# VSCode
+.vscode/
+
 # End of https://www.toptal.com/developers/gitignore/api/python,flask
